fixed broken image links

--- a/index.html
+++ b/index.html
@@ -36,15 +36,16 @@
           <br>
           <h2>Hello!</h2>
 
-          <p class="me">I am a newly-minted fullstack developer with project and office management experience in the antiques industry, and I hope to bridge the divide between the cultural and tech sectors with my new technical skills and prior experience in project and client management.</p>
+          <p class="me">I am a newly-minted fullstack developer with project, client, and office management experience in the antiques industry, and I hope to bridge the divide between the cultural and tech sectors with my new skills and prior experience.</p>
 
-          <p class="me">My current skills includes:
+          <p class="me">My current technical skills include:
             <ul id="skills">
               <li>Ruby on Rails</li>
               <li>Javascript</li>
               <li>JQuery</li>
-              <li>PostgresSQL</li>
-              <li>HTML5/CSS3</li>
+              <li>PostgreSQL</li>
+              <li>HTML5</li>
+              <li>CSS3</li>
               <li>TDD (RSpec, Capybara, Jasmine)</li>
               <li>Git</li>
             </ul>
@@ -63,13 +64,13 @@
         <div class="row">
           <div class="col-sm-3"></div>
           <div class="col-sm-3">
-            <a href="karmaforge.herokuapp.com" class="thumbnail">
+            <a href="http://karmaforge.herokuapp.com" class="thumbnail">
               <img src="images/project2.png" alt="project2">
             </a>
             <a href="https://github.com/jordpo/karmaforge"><p class="source">(source code)</p></a>
           </div>
           <div class="col-sm-3">
-            <a href="gastropangs.herokuapp.com" class="thumbnail">
+            <a href="http://gastropangs.herokuapp.com" class="thumbnail">
               <img src="images/project3.png" alt="project3">
             </a>
             <a href="https://github.com/makt-k/gastropangs"><p class="source">(source code)</p></a>
@@ -77,7 +78,7 @@
           <div class="col-sm-3"></div>
           <div class="col-sm-4"></div>
           <div class="col-sm-4">
-            <a href="mthropology.herokuapp.com" class="thumbnail">
+            <a href="http://mthropology.herokuapp.com" class="thumbnail">
               <img src="images/project1.png" alt="project1">
             </a>
             <a href="https://github.com/makt-k/Project1/tree/master/mthropology"><p class="source">(source code)</p></a>
