added information to footer

--- a/index.html
+++ b/index.html
@@ -64,24 +64,24 @@
         <div class="row">
           <div class="col-sm-3"></div>
           <div class="col-sm-3">
-            <a href="http://karmaforge.herokuapp.com" class="thumbnail">
+            <a href="http://karmaforge.herokuapp.com" class="thumbnail" target="_blank">
               <img src="images/project2.png" alt="project2">
             </a>
-            <a href="https://github.com/jordpo/karmaforge"><p class="source">(source code)</p></a>
+            <a href="https://github.com/jordpo/karmaforge" target="_blank"><p class="source">(source code)</p></a>
           </div>
           <div class="col-sm-3">
-            <a href="http://gastropangs.herokuapp.com" class="thumbnail">
+            <a href="http://gastropangs.herokuapp.com" class="thumbnail" target="_blank">
               <img src="images/project3.png" alt="project3">
             </a>
-            <a href="https://github.com/makt-k/gastropangs"><p class="source">(source code)</p></a>
+            <a href="https://github.com/makt-k/gastropangs" target="_blank"><p class="source">(source code)</p></a>
           </div>
           <div class="col-sm-3"></div>
           <div class="col-sm-4"></div>
           <div class="col-sm-4">
-            <a href="http://mthropology.herokuapp.com" class="thumbnail">
+            <a href="http://mthropology.herokuapp.com" class="thumbnail" target="_blank">
               <img src="images/project1.png" alt="project1">
             </a>
-            <a href="https://github.com/makt-k/Project1/tree/master/mthropology"><p class="source">(source code)</p></a>
+            <a href="https://github.com/makt-k/Project1/tree/master/mthropology" target="_blank"><p class="source">(source code)</p></a>
           </div>
           <div class="col-sm-4"></div>
         </div>
@@ -100,7 +100,7 @@
       </div>
     </section>
     <footer>
-      <p>&copy; mak 2014</p>
+      <p>{ Web design and photography by Karen Mak && copyright &copy; mak 2014 }</p>
     </footer>
   </body>
 </html>
