--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
       </div>
     </section>
     <footer>
-      <p>{ Web design and photography by Karen Mak && copyright &copy; mak 2014 }</p>
+      <p>{ Web design and photography by Karen Mak } </p>
+      <p> copyright &copy; mak 2014 </p>
     </footer>
   </body>
 </html>
