mobile responsiveness added

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <script type="text/javascript" src="bootstrap.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Karla:400,700,700italic,400italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/first-section.css">
+    <link rel="stylesheet" type="text/css" href="/css/second-section.css">
+    <link rel="stylesheet" type="text/css" href="/css/third-section.css">
+    <link rel="stylesheet" type="text/css" href="/css/fourth-section.css">
+    <link rel="stylesheet" type="text/css" href="/css/media.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
   <section id="home" class="big-pic">
@@ -16,11 +22,11 @@
       <span><a href="#projects" data-target="projects" class="nav-link">projects</a></span>
       <span><a href="#contact" data-target="contact" class="nav-link">contact</a></span>
     </div>
-    <div class="col-xs-4">
+    <div class="col-xs-2 col-xs-4">
     </div>
-    <div class="col-xs-4">
+    <div class="col-xs-2 col-xs-4">
     </div>
-      <div class="col-xs-4">
+      <div class="col-xs-6 col-xs-4">
         <br>
         <h1>KAREN MAK</h1>
         <h3>web developer</h3>
@@ -30,28 +36,28 @@
         <h3>material anthropologist</h3>
     </div>
   </section>
-    <section id="content">
-      <div class="container">
-        <div id="about-me">
-          <br>
-          <h2>Hello!</h2>
+  <section id="content">
+    <div class="container">
+      <div id="about-me">
+        <br>
+        <h2>Hello!</h2>
 
-          <p class="me">I am a newly-minted fullstack developer with project, client, and office management experience in the antiques industry, and I hope to bridge the divide between the cultural and tech sectors with my new skills and prior experience.</p>
+        <p class="me">I am a newly-minted fullstack developer with project, client, and office management experience in the antiques industry, and I hope to bridge the divide between the cultural and tech sectors with my new skills and prior experience.</p>
 
-          <p class="me">My current technical skills include:
-            <ul id="skills">
-              <li>Ruby on Rails</li>
-              <li>Javascript</li>
-              <li>JQuery</li>
-              <li>PostgreSQL</li>
-              <li>HTML5</li>
-              <li>CSS3</li>
-              <li>TDD (RSpec, Capybara, Jasmine)</li>
-              <li>Git</li>
-            </ul>
-          </p>
+        <p class="me">My current technical skills include:
+          <ul id="skills">
+            <li>Ruby on Rails</li>
+            <li>Javascript</li>
+            <li>JQuery</li>
+            <li>PostgreSQL</li>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>TDD (RSpec, Capybara, Jasmine)</li>
+            <li>Git</li>
+          </ul>
+        </p>
 
-           <p class="me">I am an avid traveler and coffee drinker with an unabashed love of food, photography, and making new memories.</p><br>
+         <p class="me">I am an avid traveler and coffee drinker with an unabashed love of food, photography, and making new memories.</p><br>
         </div>
       </div>
     </section>
@@ -62,28 +68,28 @@
         <p class="my-projects">My projects to date have been focused on cultivating positive paradigm shifts and behavioral changes in how we interact with the material world around us.</p>
 
         <div class="row">
-          <div class="col-sm-3"></div>
-          <div class="col-sm-3">
+          <div class="col-xs-1 col-sm-3"></div>
+          <div class="col-xs-5 col-sm-3">
             <a href="http://karmaforge.herokuapp.com" class="thumbnail" target="_blank">
               <img src="images/project2.png" alt="project2">
             </a>
             <a href="https://github.com/jordpo/karmaforge" target="_blank"><p class="source">(source code)</p></a>
           </div>
-          <div class="col-sm-3">
+          <div class="col-xs-5 col-sm-3">
             <a href="http://gastropangs.herokuapp.com" class="thumbnail" target="_blank">
               <img src="images/project3.png" alt="project3">
             </a>
             <a href="https://github.com/makt-k/gastropangs" target="_blank"><p class="source">(source code)</p></a>
           </div>
-          <div class="col-sm-3"></div>
-          <div class="col-sm-4"></div>
-          <div class="col-sm-4">
+          <div class="col-xs-2 col-sm-3"></div>
+          <div class="col-xs-1 col-sm-4"></div>
+          <div class="col-xs-6 col-sm-4">
             <a href="http://mthropology.herokuapp.com" class="thumbnail" target="_blank">
               <img src="images/project1.png" alt="project1">
             </a>
             <a href="https://github.com/makt-k/Project1/tree/master/mthropology" target="_blank"><p class="source">(source code)</p></a>
           </div>
-          <div class="col-sm-4"></div>
+          <div class="col-xs-3 col-sm-4"></div>
         </div>
       </div>
     </section>
