fixed alignment of sections

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       <span><a href="#projects" data-target="projects" class="nav-link">projects</a></span>
       <span><a href="#contact" data-target="contact" class="nav-link">contact</a></span>
     </div>
-    <div class="col-xs-2 col-xs-4">
+    <div class="col-xs-2 col-sm-4">
     </div>
-    <div class="col-xs-2 col-xs-4">
+    <div class="col-xs-2 col-sm-4">
     </div>
-      <div class="col-xs-6 col-xs-4">
+      <div class="col-xs-6 col-sm-4">
         <br>
         <h1>KAREN MAK</h1>
         <h3>web developer</h3>
