re-sized background image for faster loading

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <p class="me">My current technical skills include:
           <ul id="skills">
             <li>Ruby on Rails</li>
-            <li>Javascript</li>
-            <li>JQuery</li>
+            <li>JavaScript</li>
+            <li>kQuery</li>
             <li>PostgreSQL</li>
             <li>HTML5</li>
             <li>CSS3</li>
