--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <ul id="skills">
               <li>Ruby on Rails</li>
               <li>JavaScript</li>
-              <li>kQuery</li>
+              <li>jQuery</li>
               <li>PostgreSQL</li>
               <li>HTML5</li>
               <li>CSS3</li>
