--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html>
   <head>
     <title>Karen Mak</title>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script type="text/javascript" src="bootstrap.min.js"></script>
-    <script type="text/javascript" src="main.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Karla:400,700,700italic,400italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
@@ -13,15 +10,18 @@
     <link rel="stylesheet" type="text/css" href="/css/third-section.css">
     <link rel="stylesheet" type="text/css" href="/css/fourth-section.css">
     <link rel="stylesheet" type="text/css" href="/css/media.css">
+    <script src="jquery-1-11-0.js"></script>
+    <script src="bootstrap.min.js"></script>
+    <script src="main.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
+    <div class="navbar navbar-fixed-top">
+      <span><a href="#content" data-target="content" class="nav-link">about</a></span>
+      <span><a href="#projects" data-target="projects" class="nav-link">projects</a></span>
+      <span><a href="#contact" data-target="contact" class="nav-link">contact</a></span>
+    </div>
     <section id="home" class="big-pic">
-      <div class="navbar navbar-fixed-top">
-        <span><a href="#content" data-target="content" class="nav-link">about</a></span>
-        <span><a href="#projects" data-target="projects" class="nav-link">projects</a></span>
-        <span><a href="#contact" data-target="contact" class="nav-link">contact</a></span>
-      </div>
       <div class="col-xs-2 col-sm-4">
       </div>
       <div class="col-xs-2 col-sm-4">
