--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
       <span><a href="#contact" data-target="contact" class="nav-link">contact</a></span>
     </div>
     <section id="home" class="big-pic">
-      <div class="col-xs-2 col-sm-4">
-      </div>
-      <div class="col-xs-2 col-sm-4">
-      </div>
-        <div class="col-xs-6 col-sm-4">
+        <div class="container" id="intro">
           <br>
           <h1>KAREN MAK</h1>
           <h3>web developer</h3>
@@ -41,23 +37,29 @@
         <div id="about-me">
           <br>
           <h2>Hello!</h2>
-
-          <p class="me">I am a newly-minted fullstack developer with project, client, and office management experience in the antiques industry, and I hope to bridge the divide between the cultural and tech sectors with my new skills and prior experience.</p>
-
-          <p class="me">My current technical skills include:
-            <ul id="skills">
-              <li>Ruby on Rails</li>
-              <li>JavaScript</li>
-              <li>jQuery</li>
-              <li>PostgreSQL</li>
-              <li>HTML5</li>
-              <li>CSS3</li>
-              <li>TDD (RSpec, Capybara, Jasmine)</li>
-              <li>Git</li>
-            </ul>
-          </p>
-
-           <p class="me">I am an avid traveler and coffee drinker with an unabashed love of food, photography, and making new memories.</p><br>
+          <p class="me">As a successful project manager in the arts and heritage sector and a newly-minted fullstack developer with focus in digital humanities and social entrepreneurship, I hope to bridge between technology, culture, information, and business.</p>
+          <p class="me">My current skills include:</p>
+            <div class="col-xs-6 col-sm-6">
+              <ul class="skills">
+              <span>Front End</span>
+                <li>JavaScript</li>
+                <li>jQuery</li>
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>Adobe Creative Suite</li>
+              </ul>
+            </div>
+            <div class="col-xs-6 col-sm-6">
+              <ul class="skills">
+              <span>Back End</span>
+                <li>PostgreSQL</li>
+                <li>Ruby</li>
+                <li>Rails</li>
+                <li>TDD (RSpec, Capybara)</li>
+                <li>Git</li>
+              </ul>
+            </div>
+           <p class="me">I am an avid traveler and coffee drinker with an unabashed love of food and photography, and I have a strong interest in developing technology that will drive positive behavioral changes.</p><br>
           </div>
         </div>
       </section>
@@ -66,7 +68,6 @@
           <br>
           <br>
           <p class="my-projects">My projects to date have been focused on cultivating positive paradigm shifts and behavioral changes in how we interact with the material world around us.</p>
-
           <div class="row">
             <br>
             <div class="col-xs-6 col-sm-4">
