--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Karen Mak</title>
-    <link href='http://fonts.googleapis.com/css?family=Karla:400,700,700italic,400italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/first-section.css">
@@ -29,7 +29,7 @@
           <h3 class="sym">&&</h3>
           <h3>project manager</h3>
           <h3 class="sym">&&</h3>
-          <h3>material anthropologist</h3>
+          <h3>anthropologist</h3>
       </div>
     </section>
     <section id="content">
