--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div id="about-me">
           <br>
           <h2>Hello!</h2>
-          <p class="me">As a successful project manager in the arts and heritage sector and a newly-minted fullstack developer with a focus on digital humanities and social entrepreneurship, I hope to bridge between technology, culture, information, and business.</p>
+          <p class="me">As a successful project manager in the arts and heritage sector and a fullstack developer with a focus on digital humanities and social entrepreneurship, I hope to bridge the divide between technology, culture, information, and business.</p>
           <p class="me">My current skills include:</p>
             <div class="col-xs-6 col-sm-6">
               <ul class="skills">
@@ -55,11 +55,12 @@
                 <li>PostgreSQL</li>
                 <li>Ruby</li>
                 <li>Rails</li>
+                <li>Handlebars</li>
                 <li>TDD (RSpec, Capybara)</li>
                 <li>Git</li>
               </ul>
             </div>
-           <p class="me">I am an avid traveler and coffee drinker with an unabashed love of food and photography, and I have a strong interest in developing technology that will drive positive behavioral changes.</p><br>
+           <p class="me">I am an avid traveler and coffee drinker with an unabashed love of food and photography, and I have a strong interest in developing technology that will drive positive behavioral changes and will promote the appreciation of small things, from a hand-crafted bowl or a good meal to a simple stroll down the street.</p><br>
           </div>
         </div>
       </section>
