--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div id="about-me">
           <br>
           <h2>Hello!</h2>
-          <p class="me">As a successful project manager in the arts and heritage sector and a fullstack developer with a focus on digital humanities and social entrepreneurship, I hope to bridge the divide between technology, culture, information, and business.</p>
+          <p class="me">As a successful project manager in the arts and heritage sector and a full-stack developer with an interest in digital humanities and social entrepreneurship, I hope to bridge the divide between technology, culture, information, and business.</p>
           <p class="me">My current skills include:</p>
             <div class="col-xs-6 col-sm-6">
               <ul class="skills">
