open resume in a new tab

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <li><a href="https://github.com/makt-k" target="_blank">Github</a></li>
             <li><a href="https://twitter.com/makt_k" target="_blank">Twitter</a></li>
             <li><a href="mailto:karen.mak@stx.oxon.org" target="_top" class="email">Email</a></li>
-            <li><a href="Resume.pdf">Resume</a></li>
+            <li><a href="Resume.pdf" target="_blank">Resume</a></li>
           </ul>
         </div>
       </section>
