fixed linkedin typo

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <br>
           <h3 class="email">Care to talk? How about a coffee?</h3>
           <ul class="contact">
-            <li><a href="https://linkedin.com/in/maktk" target="_blank">Linkedin</a></li>
+            <li><a href="https://linkedin.com/in/maktk" target="_blank">LinkedIn</a></li>
             <li><a href="https://github.com/makt-k" target="_blank">Github</a></li>
             <li><a href="https://twitter.com/makt_k" target="_blank">Twitter</a></li>
             <li><a href="mailto:karen.mak@stx.oxon.org" target="_top" class="email">Email</a></li>
