added temp browser icon

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Karen Mak</title>
+    <link rel="icon" type="image/png" href="/images/Icon.png">
     <link href='http://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
@@ -25,7 +26,7 @@
         <div class="container" id="intro">
           <br>
           <h1>KAREN MAK</h1>
-          <h3>web developer</h3>
+          <h3>full-stack developer</h3>
           <h3 class="sym">&&</h3>
           <h3>project manager</h3>
           <h3 class="sym">&&</h3>
@@ -36,7 +37,6 @@
       <div class="container">
         <div id="about-me">
           <br>
-          <h2>Hello!</h2>
           <p class="me">As a successful project manager in the arts and heritage sector and a full-stack developer with an interest in digital humanities and social entrepreneurship, I hope to bridge the divide between technology, culture, and business.</p>
           <p class="me">My current skills include:</p>
             <div class="col-xs-6 col-sm-6">
@@ -46,7 +46,7 @@
                 <li>jQuery</li>
                 <li>HTML5</li>
                 <li>CSS3</li>
-                <li>Adobe Creative Suite</li>
+                <li>AngularJS</li>
               </ul>
             </div>
             <div class="col-xs-6 col-sm-6">
